Bug 407793 - Maximize vertically and horizontally do not work in wayland
Summary: Maximize vertically and horizontally do not work in wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.16.3
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Vlad Zahorodnii
URL:
Keywords: wayland-only
: 435513 437178 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-21 09:41 UTC by Michael D
Modified: 2021-05-18 21:18 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:
vlad.zahorodnii: Wayland+
vlad.zahorodnii: X11-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2019-05-21 09:41:35 UTC
I cannot maximize a window vertically or horizontally in wayland using a shortcut or by double clicking on the decoration when the setting is enabled in the Window Behavior settings.
Comment 1 Vlad Zahorodnii 2019-05-21 10:01:47 UTC
We don't have maximized horizontally and maximized vertically states on Wayland. It would be great to sort out first whether we need these two in kwin/wayland.
Comment 2 Michael D 2019-05-21 10:14:29 UTC
I would say they're extremely useful, especially vertical maximize since a growing number of people have screens with higher and higher resolution making vertical maximize much more useful than full maximize.

Just to note, gnome/mutter wayland has it (though it can only be invoked at the moment by hotkey).
Comment 3 David Edmundson 2019-05-21 11:37:01 UTC
>We don't have maximized horizontally and maximized vertically states on Wayland

That doesn't need to be a problem, we would just send a configure event with the new size whilst keeping the window flags as being normal. I'm sure this used to work.
Comment 4 postix 2019-07-30 16:02:35 UTC
WIP: https://phabricator.kde.org/D22811
Comment 5 Vlad Zahorodnii 2019-07-30 16:23:37 UTC
That patch is actually good to go. I just need to refactor state tracking logic in ShellClient to fix one minor bug.
Comment 6 Bug Janitor Service 2020-09-10 11:03:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/259
Comment 7 David de Cos 2020-11-25 14:37:52 UTC
This is an absolute must, at least for me. I use both of them (maximize vertically as well as horizontally) all the time.
Comment 8 Vlad Zahorodnii 2021-02-17 14:39:42 UTC
Git commit 378ecbc88c18600bd8286c13efb0d7df4eaa220a by Vlad Zahorodnii.
Committed on 17/02/2021 at 14:39.
Pushed by vladz into branch 'master'.

wayland: Implement maximized horizontal/vertical states

M  +246  -0    autotests/integration/xdgshellclient_test.cpp
M  +60   -20   src/xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/378ecbc88c18600bd8286c13efb0d7df4eaa220a
Comment 9 Nate Graham 2021-04-09 02:17:04 UTC
*** Bug 435513 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2021-05-18 21:18:30 UTC
*** Bug 437178 has been marked as a duplicate of this bug. ***