wayland: Implement maximized horizontal/vertical states

BUG: 407793